--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: statip
 Type: Package
-Title: Miscellaneous Basic Statistical Functions
-Version: 0.1.5
-Date: 2017-10-01
+Title: Statistical Functions for Probability Distributions
+Version: 0.1.6
+Date: 2017-11-13
 Authors@R: c(person("Paul", "Poncet", , "paulponcet@yahoo.fr", role = c("aut", "cre")), 
     person("The R Core Team", role = c("aut", "cph"), 
            comment = "C function 'BinDist' copied from package 'stats'"), 
