Functions 'bandwidth()' added; modifications in 'kernelfun()'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ S3method(kernelfun,"function")
 S3method(kernelfun,character)
 S3method(plot,loess)
 S3method(predict,default)
+S3method(predict,kmeans)
 export(.kernelsList)
+export(asplinefun)
+export(bandwidth)
 export(dbern)
 export(densityfun)
 export(distr2name)
@@ -15,14 +18,17 @@ export(kernelfun)
 export(lagk)
 export(mfv)
 export(mfv1)
+export(na.pass)
 export(name2distr)
 export(pbern)
 export(plot)
 export(predict)
 export(qbern)
 export(rbern)
+import(akima)
 importFrom(bazar,is.empty)
-importFrom(dplyr,if_else)
+importFrom(clue,cl_predict)
+importFrom(grDevices,xy.coords)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(stats,approxfun)
@@ -33,6 +39,7 @@ importFrom(stats,bw.nrd0)
 importFrom(stats,bw.ucv)
 importFrom(stats,fft)
 importFrom(stats,integrate)
+importFrom(stats,na.pass)
 importFrom(stats,pbinom)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
