--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: statip
 Type: Package
 Title: Statistical Functions for Probability Distributions
-Version: 0.1.6
-Date: 2017-11-13
+Version: 0.1.9
+Date: 2017-12-23
 Authors@R: c(person("Paul", "Poncet", , "paulponcet@yahoo.fr", role = c("aut", "cre")), 
     person("The R Core Team", role = c("aut", "cph"), 
            comment = "C function 'BinDist' copied from package 'stats'"), 
@@ -23,9 +23,11 @@ LazyData: TRUE
 Depends:
     R (>= 3.1.3)
 Imports:
+    akima,
     bazar,
-    dplyr,
+    clue,
     graphics,
+    grDevices,
     stats
 Suggests:
     knitr, 
