--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: statip
 Type: Package
 Title: Statistical Functions for Probability Distributions
-Version: 0.1.9
+Version: 0.2.0
 Date: 2018-07-31
 Authors@R: c(person("Paul", "Poncet", , "paulponcet@yahoo.fr", role = c("aut", "cre")), 
     person("The R Core Team", role = c("aut", "cph"), 
@@ -17,7 +17,8 @@ Description: A collection of miscellaneous statistical functions for
     probability density estimation: densityfun(); 
     most frequent value estimation: mfv(), mfv1(); 
     calculation of the Hellinger distance: hellinger(); 
-    use of classical kernels: kernelfun(), kernel_properties().
+    use of classical kernels: kernelfun(), kernel_properties(); 
+    univariate piecewise-constant regression: picor(). 
 License: GPL-3
 LazyData: TRUE
 Depends:
@@ -26,6 +27,7 @@ Imports:
     bazar,
     clue,
     graphics,
+    rpart,
     stats
 Suggests:
     knitr, 
