--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: statip
 Type: Package
 Title: Statistical Functions for Probability Distributions and Regression
-Version: 0.2.1
-Date: 2019-04-05
+Version: 0.2.3
 Authors@R: c(person("Paul", "Poncet", , "paulponcet@yahoo.fr", role = c("aut", "cre")), 
     person("The R Core Team", role = c("aut", "cph"), 
            comment = "C function 'BinDist' copied from package 'stats'"), 
@@ -11,20 +10,22 @@ Authors@R: c(person("Paul", "Poncet", , "paulponcet@yahoo.fr", role = c("aut", "
     person("Adrian", "Baddeley", role = "ctb", 
            comment = "C function 'BinDist' copied from package 'stats'"))
 Description: A collection of miscellaneous statistical functions for 
-    probability distributions: dbern(), pbern(), qbern(), rbern() for 
-    the Bernoulli distribution, and distr2name(), name2distr() for 
+    probability distributions: 'dbern()', 'pbern()', 'qbern()', 'rbern()' for 
+    the Bernoulli distribution, and 'distr2name()', 'name2distr()' for 
     distribution names; 
-    probability density estimation: densityfun(); 
-    most frequent value estimation: mfv(), mfv1(); 
-    calculation of the Hellinger distance: hellinger(); 
-    use of classical kernels: kernelfun(), kernel_properties(); 
-    univariate piecewise-constant regression: picor(). 
+    probability density estimation: 'densityfun()'; 
+    most frequent value estimation: 'mfv()', 'mfv1()'; 
+    other statistical measures of location: 'cv()' (coefficient of variation),
+    'midhinge()', 'midrange()', 'trimean()'; 
+    construction of histograms: 'histo()', 'find_breaks()'; 
+    calculation of the Hellinger distance: 'hellinger()'; 
+    use of classical kernels: 'kernelfun()', 'kernel_properties()'; 
+    univariate piecewise-constant regression: 'picor()'. 
 License: GPL-3
 LazyData: TRUE
 Depends:
     R (>= 3.1.3)
 Imports:
-    bazar,
     clue,
     graphics,
     rpart,
@@ -34,4 +35,4 @@ Suggests:
     testthat
 URL: https://github.com/paulponcet/statip
 BugReports: https://github.com/paulponcet/statip/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 7.0.0
